source/tools/Compiler - Copy/c.output
Terminals unused in grammar

   INCLUDE


State 375 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | OPENPAREN_OP expression CLOSEPAREN_OP

    5 postfix_expression: primary_expression
    6                   | postfix_expression OPENBRACE_OP expression CLOSEBRACE_OP
    7                   | postfix_expression OPENPAREN_OP CLOSEPAREN_OP
    8                   | postfix_expression OPENPAREN_OP argument_expression_list CLOSEPAREN_OP
    9                   | postfix_expression PERIOD_OP IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP
   13                   | OPENPAREN_OP type_name CLOSEPAREN_OP OCURLY_OP initializer_list CCURLY_OP
   14                   | OPENPAREN_OP type_name CLOSEPAREN_OP OCURLY_OP initializer_list COMMA_OP CCURLY_OP

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list COMMA_OP assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC_OP unary_expression
   19                 | DEC_OP unary_expression
   20                 | unary_operator cast_expression
   21                 | SIZEOF unary_expression
   22                 | SIZEOF OPENPAREN_OP type_name CLOSEPAREN_OP

   23 unary_operator: BIT_AND
   24               | TIMES_OP
   25               | PLUS_OP
   26               | MINUS_OP
   27               | TILDE_OP
   28               | NOT_OP

   29 cast_expression: unary_expression
   30                | OPENPAREN_OP type_name CLOSEPAREN_OP cast_expression

   31 multiplicative_expression: cast_expression
   32                          | multiplicative_expression TIMES_OP cast_expression
   33                          | multiplicative_expression DIV_OP cast_expression
   34                          | multiplicative_expression MOD_OP cast_expression

   35 additive_expression: multiplicative_expression
   36                    | additive_expression PLUS_OP multiplicative_expression
   37                    | additive_expression MINUS_OP multiplicative_expression

   38 shift_expression: additive_expression
   39                 | shift_expression LEFT_OP additive_expression
   40                 | shift_expression RIGHT_OP additive_expression

   41 relational_expression: shift_expression
   42                      | relational_expression LESS_OP shift_expression
   43                      | relational_expression GREATER_OP shift_expression
   44                      | relational_expression LE_OP shift_expression
   45                      | relational_expression GE_OP shift_expression

   46 equality_expression: relational_expression
   47                    | equality_expression EQ_OP relational_expression
   48                    | equality_expression NE_OP relational_expression

   49 and_expression: equality_expression
   50               | and_expression BIT_AND equality_expression

   51 exclusive_or_expression: and_expression
   52                        | exclusive_or_expression XOR_OP and_expression

   53 inclusive_or_expression: exclusive_or_expression
   54                        | inclusive_or_expression BIT_OR exclusive_or_expression

   55 logical_and_expression: inclusive_or_expression
   56                       | logical_and_expression AND_OP inclusive_or_expression

   57 logical_or_expression: logical_and_expression
   58                      | logical_or_expression OR_OP logical_and_expression

   59 conditional_expression: logical_or_expression
   60                       | logical_or_expression QUESTION_OP expression COLON_OP conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 assignment_operator: EQUAL_OP
   64                    | MUL_ASSIGN
   65                    | DIV_ASSIGN
   66                    | MOD_ASSIGN
   67                    | ADD_ASSIGN
   68                    | SUB_ASSIGN
   69                    | LEFT_ASSIGN
   70                    | RIGHT_ASSIGN
   71                    | AND_ASSIGN
   72                    | XOR_ASSIGN
   73                    | OR_ASSIGN

   74 expression: assignment_expression
   75           | expression COMMA_OP assignment_expression

   76 constant_expression: conditional_expression

   77 declaration: declaration_specifiers SEMI_OP
   78            | declaration_specifiers init_declarator_list SEMI_OP

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers
   85                       | function_specifier
   86                       | function_specifier declaration_specifiers

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list COMMA_OP init_declarator

   89 init_declarator: declarator
   90                | declarator EQUAL_OP initializer

   91 storage_class_specifier: TYPEDEF
   92                        | EXTERN
   93                        | STATIC
   94                        | AUTO
   95                        | REGISTER

   96 type_specifier: VOID
   97               | CHAR
   98               | SHORT
   99               | INT
  100               | LONG
  101               | LONGLONG
  102               | FLOAT
  103               | DOUBLE
  104               | LONGDOUBLE
  105               | SIGNED
  106               | UNSIGNED
  107               | BOOL
  108               | COMPLEX
  109               | IMAGINARY
  110               | struct_or_union_specifier
  111               | enum_specifier
  112               | TYPE_NAME

  113 struct_or_union_specifier: struct_or_union IDENTIFIER OCURLY_OP struct_declaration_list CCURLY_OP
  114                          | struct_or_union OCURLY_OP struct_declaration_list CCURLY_OP
  115                          | struct_or_union IDENTIFIER

  116 struct_or_union: STRUCT
  117                | UNION

  118 struct_declaration_list: struct_declaration
  119                        | struct_declaration_list struct_declaration

  120 struct_declaration: specifier_qualifier_list struct_declarator_list SEMI_OP

  121 specifier_qualifier_list: type_specifier specifier_qualifier_list
  122                         | type_specifier
  123                         | type_qualifier specifier_qualifier_list
  124                         | type_qualifier

  125 struct_declarator_list: struct_declarator
  126                       | struct_declarator_list COMMA_OP struct_declarator

  127 struct_declarator: declarator
  128                  | COLON_OP constant_expression
  129                  | declarator COLON_OP constant_expression

  130 enum_specifier: ENUM OCURLY_OP enumerator_list CCURLY_OP
  131               | ENUM IDENTIFIER OCURLY_OP enumerator_list CCURLY_OP
  132               | ENUM OCURLY_OP enumerator_list COMMA_OP CCURLY_OP
  133               | ENUM IDENTIFIER OCURLY_OP enumerator_list COMMA_OP CCURLY_OP
  134               | ENUM IDENTIFIER

  135 enumerator_list: enumerator
  136                | enumerator_list COMMA_OP enumerator

  137 enumerator: IDENTIFIER
  138           | IDENTIFIER EQUAL_OP constant_expression

  139 type_qualifier: CONST
  140               | RESTRICT
  141               | VOLATILE

  142 function_specifier: INLINE

  143 declarator: pointer direct_declarator
  144           | direct_declarator

  145 direct_declarator: IDENTIFIER
  146                  | OPENPAREN_OP declarator CLOSEPAREN_OP
  147                  | direct_declarator OPENBRACE_OP type_qualifier_list assignment_expression CLOSEBRACE_OP
  148                  | direct_declarator OPENBRACE_OP type_qualifier_list CLOSEBRACE_OP
  149                  | direct_declarator OPENBRACE_OP assignment_expression CLOSEBRACE_OP
  150                  | direct_declarator OPENBRACE_OP STATIC type_qualifier_list assignment_expression CLOSEBRACE_OP
  151                  | direct_declarator OPENBRACE_OP type_qualifier_list STATIC assignment_expression CLOSEBRACE_OP
  152                  | direct_declarator OPENBRACE_OP type_qualifier_list TIMES_OP CLOSEBRACE_OP
  153                  | direct_declarator OPENBRACE_OP TIMES_OP CLOSEBRACE_OP
  154                  | direct_declarator OPENBRACE_OP CLOSEBRACE_OP
  155                  | direct_declarator OPENPAREN_OP parameter_type_list CLOSEPAREN_OP
  156                  | direct_declarator OPENPAREN_OP identifier_list CLOSEPAREN_OP
  157                  | direct_declarator OPENPAREN_OP CLOSEPAREN_OP

  158 pointer: TIMES_OP
  159        | TIMES_OP type_qualifier_list
  160        | TIMES_OP pointer
  161        | TIMES_OP type_qualifier_list pointer

  162 type_qualifier_list: type_qualifier
  163                    | type_qualifier_list type_qualifier

  164 parameter_type_list: parameter_list
  165                    | parameter_list COMMA_OP ELLIPSIS

  166 parameter_list: parameter_declaration
  167               | parameter_list COMMA_OP parameter_declaration

  168 parameter_declaration: declaration_specifiers declarator
  169                      | declaration_specifiers abstract_declarator
  170                      | declaration_specifiers

  171 identifier_list: IDENTIFIER
  172                | identifier_list COMMA_OP IDENTIFIER

  173 type_name: specifier_qualifier_list
  174          | specifier_qualifier_list abstract_declarator

  175 abstract_declarator: pointer
  176                    | direct_abstract_declarator
  177                    | pointer direct_abstract_declarator

  178 direct_abstract_declarator: OPENPAREN_OP abstract_declarator CLOSEPAREN_OP
  179                           | OPENBRACE_OP CLOSEBRACE_OP
  180                           | OPENBRACE_OP assignment_expression CLOSEBRACE_OP
  181                           | direct_abstract_declarator OPENBRACE_OP CLOSEBRACE_OP
  182                           | direct_abstract_declarator OPENBRACE_OP assignment_expression CLOSEBRACE_OP
  183                           | OPENBRACE_OP TIMES_OP CLOSEBRACE_OP
  184                           | direct_abstract_declarator OPENBRACE_OP TIMES_OP CLOSEBRACE_OP
  185                           | OPENPAREN_OP CLOSEPAREN_OP
  186                           | OPENPAREN_OP parameter_type_list CLOSEPAREN_OP
  187                           | direct_abstract_declarator OPENPAREN_OP CLOSEPAREN_OP
  188                           | direct_abstract_declarator OPENPAREN_OP parameter_type_list CLOSEPAREN_OP

  189 initializer: assignment_expression
  190            | OCURLY_OP initializer_list CCURLY_OP
  191            | OCURLY_OP initializer_list COMMA_OP CCURLY_OP

  192 initializer_list: initializer
  193                 | designation initializer
  194                 | initializer_list COMMA_OP initializer
  195                 | initializer_list COMMA_OP designation initializer

  196 designation: designator_list EQUAL_OP

  197 designator_list: designator
  198                | designator_list designator

  199 designator: OPENBRACE_OP constant_expression CLOSEBRACE_OP
  200           | PERIOD_OP IDENTIFIER

  201 statement: labeled_statement
  202          | compound_statement
  203          | expression_statement
  204          | selection_statement
  205          | iteration_statement
  206          | jump_statement

  207 labeled_statement: IDENTIFIER COLON_OP statement
  208                  | CASE constant_expression COLON_OP statement
  209                  | DEFAULT COLON_OP statement

  210 compound_statement: OCURLY_OP CCURLY_OP
  211                   | OCURLY_OP block_item_list CCURLY_OP

  212 block_item_list: block_item
  213                | block_item_list block_item

  214 block_item: declaration
  215           | statement

  216 expression_statement: SEMI_OP
  217                     | expression SEMI_OP

  218 selection_statement: IF OPENPAREN_OP expression CLOSEPAREN_OP statement
  219                    | IF OPENPAREN_OP expression CLOSEPAREN_OP statement ELSE statement
  220                    | SWITCH OPENPAREN_OP expression CLOSEPAREN_OP statement

  221 iteration_statement: WHILE OPENPAREN_OP expression CLOSEPAREN_OP statement
  222                    | DO statement WHILE OPENPAREN_OP expression CLOSEPAREN_OP SEMI_OP
  223                    | FOR OPENPAREN_OP expression_statement expression_statement CLOSEPAREN_OP statement
  224                    | FOR OPENPAREN_OP expression_statement expression_statement expression CLOSEPAREN_OP statement
  225                    | FOR OPENPAREN_OP declaration expression_statement CLOSEPAREN_OP statement
  226                    | FOR OPENPAREN_OP declaration expression_statement expression CLOSEPAREN_OP statement

  227 jump_statement: GOTO IDENTIFIER SEMI_OP
  228               | CONTINUE SEMI_OP
  229               | BREAK SEMI_OP
  230               | RETURN SEMI_OP
  231               | RETURN expression SEMI_OP

  232 translation_unit: external_declaration
  233                 | translation_unit external_declaration

  234 external_declaration: function_definition
  235                     | declaration

  236 function_definition: declaration_specifiers declarator declaration_list compound_statement
  237                    | declaration_specifiers declarator compound_statement

  238 declaration_list: declaration
  239                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 1 9 10 113 115 131 133 134 137 138 145 171 172 200
    207 227
CONSTANT (259) 2
STRING_LITERAL (260) 3
PTR_OP (261) 10
INC_OP (262) 11 18
DEC_OP (263) 12 19
LEFT_OP (264) 39
RIGHT_OP (265) 40
LE_OP (266) 44
GE_OP (267) 45
EQ_OP (268) 47
NE_OP (269) 48
SEMI_OP (270) 77 78 120 216 217 222 227 228 229 230 231
OCURLY_OP (271) 13 14 113 114 130 131 132 133 190 191 210 211
CCURLY_OP (272) 13 14 113 114 130 131 132 133 190 191 210 211
COMMA_OP (273) 14 16 75 88 126 132 133 136 165 167 172 191 194 195
COLON_OP (274) 60 128 129 207 208 209
EQUAL_OP (275) 63 90 138 196
OPENPAREN_OP (276) 4 7 8 13 14 22 30 146 155 156 157 178 185 186 187
    188 218 219 220 221 222 223 224 225 226
CLOSEPAREN_OP (277) 4 7 8 13 14 22 30 146 155 156 157 178 185 186 187
    188 218 219 220 221 222 223 224 225 226
OPENBRACE_OP (278) 6 147 148 149 150 151 152 153 154 179 180 181 182
    183 184 199
CLOSEBRACE_OP (279) 6 147 148 149 150 151 152 153 154 179 180 181 182
    183 184 199
PERIOD_OP (280) 9 200
NOT_OP (281) 28
LESS_OP (282) 42
GREATER_OP (283) 43
TILDE_OP (284) 27
XOR_OP (285) 52
QUESTION_OP (286) 60
AND_OP (287) 56
OR_OP (288) 58
MUL_ASSIGN (289) 64
DIV_ASSIGN (290) 65
MOD_ASSIGN (291) 66
ADD_ASSIGN (292) 67
SUB_ASSIGN (293) 68
LEFT_ASSIGN (294) 69
RIGHT_ASSIGN (295) 70
AND_ASSIGN (296) 71
XOR_ASSIGN (297) 72
OR_ASSIGN (298) 73
TYPE_NAME (299) 112
PLUS_OP (300) 25 36
MINUS_OP (301) 26 37
TIMES_OP (302) 24 32 152 153 158 159 160 161 183 184
DIV_OP (303) 33
MOD_OP (304) 34
BIT_OR (305) 54
BIT_AND (306) 23 50
TYPEDEF (307) 91
EXTERN (308) 92
STATIC (309) 93 150 151
AUTO (310) 94
REGISTER (311) 95
INLINE (312) 142
RESTRICT (313) 140
CHAR (314) 97
SHORT (315) 98
INT (316) 99
LONG (317) 100
LONGLONG (318) 101
SIGNED (319) 105
UNSIGNED (320) 106
FLOAT (321) 102
DOUBLE (322) 103
LONGDOUBLE (323) 104
CONST (324) 139
VOLATILE (325) 141
VOID (326) 96
SIZEOF (327) 21 22
BOOL (328) 107
COMPLEX (329) 108
IMAGINARY (330) 109
STRUCT (331) 116
UNION (332) 117
ENUM (333) 130 131 132 133 134
ELLIPSIS (334) 165
INCLUDE (335)
CASE (336) 208
DEFAULT (337) 209
IF (338) 218 219
ELSE (339) 219
SWITCH (340) 220
WHILE (341) 221 222
DO (342) 222
FOR (343) 223 224 225 226
GOTO (344) 227
CONTINUE (345) 228
BREAK (346) 229
RETURN (347) 230 231


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
primary_expression (94)
    on left: 1 2 3 4, on right: 5
postfix_expression (95)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 6 7 8 9 10 11 12 17
argument_expression_list (96)
    on left: 15 16, on right: 8 16
unary_expression (97)
    on left: 17 18 19 20 21 22, on right: 18 19 21 29 62
unary_operator (98)
    on left: 23 24 25 26 27 28, on right: 20
cast_expression (99)
    on left: 29 30, on right: 20 30 31 32 33 34
multiplicative_expression (100)
    on left: 31 32 33 34, on right: 32 33 34 35 36 37
additive_expression (101)
    on left: 35 36 37, on right: 36 37 38 39 40
shift_expression (102)
    on left: 38 39 40, on right: 39 40 41 42 43 44 45
relational_expression (103)
    on left: 41 42 43 44 45, on right: 42 43 44 45 46 47 48
equality_expression (104)
    on left: 46 47 48, on right: 47 48 49 50
and_expression (105)
    on left: 49 50, on right: 50 51 52
exclusive_or_expression (106)
    on left: 51 52, on right: 52 53 54
inclusive_or_expression (107)
    on left: 53 54, on right: 54 55 56
logical_and_expression (108)
    on left: 55 56, on right: 56 57 58
logical_or_expression (109)
    on left: 57 58, on right: 58 59 60
conditional_expression (110)
    on left: 59 60, on right: 60 61 76
assignment_expression (111)
    on left: 61 62, on right: 15 16 62 74 75 147 149 150 151 180 182
    189
assignment_operator (112)
    on left: 63 64 65 66 67 68 69 70 71 72 73, on right: 62
expression (113)
    on left: 74 75, on right: 4 6 60 75 217 218 219 220 221 222 224
    226 231
constant_expression (114)
    on left: 76, on right: 128 129 138 199 208
declaration (115)
    on left: 77 78, on right: 214 225 226 235 238 239
declaration_specifiers (116)
    on left: 79 80 81 82 83 84 85 86, on right: 77 78 80 82 84 86 168
    169 170 236 237
init_declarator_list (117)
    on left: 87 88, on right: 78 88
init_declarator (118)
    on left: 89 90, on right: 87 88
storage_class_specifier (119)
    on left: 91 92 93 94 95, on right: 79 80
type_specifier (120)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111 112, on right: 81 82 121 122
struct_or_union_specifier (121)
    on left: 113 114 115, on right: 110
struct_or_union (122)
    on left: 116 117, on right: 113 114 115
struct_declaration_list (123)
    on left: 118 119, on right: 113 114 119
struct_declaration (124)
    on left: 120, on right: 118 119
specifier_qualifier_list (125)
    on left: 121 122 123 124, on right: 120 121 123 173 174
struct_declarator_list (126)
    on left: 125 126, on right: 120 126
struct_declarator (127)
    on left: 127 128 129, on right: 125 126
enum_specifier (128)
    on left: 130 131 132 133 134, on right: 111
enumerator_list (129)
    on left: 135 136, on right: 130 131 132 133 136
enumerator (130)
    on left: 137 138, on right: 135 136
type_qualifier (131)
    on left: 139 140 141, on right: 83 84 123 124 162 163
function_specifier (132)
    on left: 142, on right: 85 86
declarator (133)
    on left: 143 144, on right: 89 90 127 129 146 168 236 237
direct_declarator (134)
    on left: 145 146 147 148 149 150 151 152 153 154 155 156 157, on right:
    143 144 147 148 149 150 151 152 153 154 155 156 157
pointer (135)
    on left: 158 159 160 161, on right: 143 160 161 175 177
type_qualifier_list (136)
    on left: 162 163, on right: 147 148 150 151 152 159 161 163
parameter_type_list (137)
    on left: 164 165, on right: 155 186 188
parameter_list (138)
    on left: 166 167, on right: 164 165 167
parameter_declaration (139)
    on left: 168 169 170, on right: 166 167
identifier_list (140)
    on left: 171 172, on right: 156 172
type_name (141)
    on left: 173 174, on right: 13 14 22 30
abstract_declarator (142)
    on left: 175 176 177, on right: 169 174 178
direct_abstract_declarator (143)
    on left: 178 179 180 181 182 183 184 185 186 187 188, on right:
    176 177 181 182 184 187 188
initializer (144)
    on left: 189 190 191, on right: 90 192 193 194 195
initializer_list (145)
    on left: 192 193 194 195, on right: 13 14 190 191 194 195
designation (146)
    on left: 196, on right: 193 195
designator_list (147)
    on left: 197 198, on right: 196 198
designator (148)
    on left: 199 200, on right: 197 198
statement (149)
    on left: 201 202 203 204 205 206, on right: 207 208 209 215 218
    219 220 221 222 223 224 225 226
labeled_statement (150)
    on left: 207 208 209, on right: 201
compound_statement (151)
    on left: 210 211, on right: 202 236 237
block_item_list (152)
    on left: 212 213, on right: 211 213
block_item (153)
    on left: 214 215, on right: 212 213
expression_statement (154)
    on left: 216 217, on right: 203 223 224 225 226
selection_statement (155)
    on left: 218 219 220, on right: 204
iteration_statement (156)
    on left: 221 222 223 224 225 226, on right: 205
jump_statement (157)
    on left: 227 228 229 230 231, on right: 206
translation_unit (158)
    on left: 232 233, on right: 0 233
external_declaration (159)
    on left: 234 235, on right: 232 233
function_definition (160)
    on left: 236 237, on right: 234
declaration_list (161)
    on left: 238 239, on right: 236 239


State 0

    0 $accept: . translation_unit $end

    TYPE_NAME   shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    INLINE      shift, and go to state 7
    RESTRICT    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    LONGLONG    shift, and go to state 13
    SIGNED      shift, and go to state 14
    UNSIGNED    shift, and go to state 15
    FLOAT       shift, and go to state 16
    DOUBLE      shift, and go to state 17
    LONGDOUBLE  shift, and go to state 18
    CONST       shift, and go to state 19
    VOLATILE    shift, and go to state 20
    VOID        shift, and go to state 21
    BOOL        shift, and go to state 22
    COMPLEX     shift, and go to state 23
    IMAGINARY   shift, and go to state 24
    STRUCT      shift, and go to state 25
    UNION       shift, and go to state 26
    ENUM        shift, and go to state 27

    declaration                go to state 28
    declaration_specifiers     go to state 29
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35
    function_specifier         go to state 36
    translation_unit           go to state 37
    external_declaration       go to state 38
    function_definition        go to state 39


State 1

  112 type_specifier: TYPE_NAME .

    $default  reduce using rule 112 (type_specifier)


State 2

   91 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 91 (storage_class_specifier)


State 3

   92 storage_class_specifier: EXTERN .

    $default  reduce using rule 92 (storage_class_specifier)


State 4

   93 storage_class_specifier: STATIC .

    $default  reduce using rule 93 (storage_class_specifier)


State 5

   94 storage_class_specifier: AUTO .

    $default  reduce using rule 94 (storage_class_specifier)


State 6

   95 storage_class_specifier: REGISTER .

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  142 function_specifier: INLINE .

    $default  reduce using rule 142 (function_specifier)


State 8

  140 type_qualifier: RESTRICT .

    $default  reduce using rule 140 (type_qualifier)


State 9

   97 type_specifier: CHAR .

    $default  reduce using rule 97 (type_specifier)


State 10

   98 type_specifier: SHORT .

    $default  reduce using rule 98 (type_specifier)


State 11

   99 type_specifier: INT .

    $default  reduce using rule 99 (type_specifier)


State 12

  100 type_specifier: LONG .

    $default  reduce using rule 100 (type_specifier)


State 13

  101 type_specifier: LONGLONG .

    $default  reduce using rule 101 (type_specifier)


State 14

  105 type_specifier: SIGNED .

    $default  reduce using rule 105 (type_specifier)


State 15

  106 type_specifier: UNSIGNED .

    $default  reduce using rule 106 (type_specifier)


State 16

  102 type_specifier: FLOAT .

    $default  reduce using rule 102 (type_specifier)


State 17

  103 type_specifier: DOUBLE .

    $default  reduce using rule 103 (type_specifier)


State 18

  104 type_specifier: LONGDOUBLE .

    $default  reduce using rule 104 (type_specifier)


State 19

  139 type_qualifier: CONST .

    $default  reduce using rule 139 (type_qualifier)


State 20

  141 type_qualifier: VOLATILE .

    $default  reduce using rule 141 (type_qualifier)


State 21

   96 type_specifier: VOID .

    $default  reduce using rule 96 (type_specifier)


State 22

  107 type_specifier: BOOL .

    $default  reduce using rule 107 (type_specifier)


State 23

  108 type_specifier: COMPLEX .

    $default  reduce using rule 108 (type_specifier)


State 24

  109 type_specifier: IMAGINARY .

    $default  reduce using rule 109 (type_specifier)


State 25

  116 struct_or_union: STRUCT .

    $default  reduce using rule 116 (struct_or_union)


State 26

  117 struct_or_union: UNION .

    $default  reduce using rule 117 (struct_or_union)


State 27

  130 enum_specifier: ENUM . OCURLY_OP enumerator_list CCURLY_OP
  131               | ENUM . IDENTIFIER OCURLY_OP enumerator_list CCURLY_OP
  132               | ENUM . OCURLY_OP enumerator_list COMMA_OP CCURLY_OP
  133               | ENUM . IDENTIFIER OCURLY_OP enumerator_list COMMA_OP CCURLY_OP
  134               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 40
    OCURLY_OP   shift, and go to state 41


State 28

  235 external_declaration: declaration .

    $default  reduce using rule 235 (external_declaration)


State 29

   77 declaration: declaration_specifiers . SEMI_OP
   78            | declaration_specifiers . init_declarator_list SEMI_OP
  236 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  237                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER    shift, and go to state 42
    SEMI_OP       shift, and go to state 43
    OPENPAREN_OP  shift, and go to state 44
    TIMES_OP      shift, and go to state 45

    init_declarator_list  go to state 46
    init_declarator       go to state 47
    declarator            go to state 48
    direct_declarator     go to state 49
    pointer               go to state 50


State 30

   79 declaration_specifiers: storage_class_specifier .
   80                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME   shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    INLINE      shift, and go to state 7
    RESTRICT    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    LONGLONG    shift, and go to state 13
    SIGNED      shift, and go to state 14
    UNSIGNED    shift, and go to state 15
    FLOAT       shift, and go to state 16
    DOUBLE      shift, and go to state 17
    LONGDOUBLE  shift, and go to state 18
    CONST       shift, and go to state 19
    VOLATILE    shift, and go to state 20
    VOID        shift, and go to state 21
    BOOL        shift, and go to state 22
    COMPLEX     shift, and go to state 23
    IMAGINARY   shift, and go to state 24
    STRUCT      shift, and go to state 25
    UNION       shift, and go to state 26
    ENUM        shift, and go to state 27

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35
    function_specifier         go to state 36


State 31

   81 declaration_specifiers: type_specifier .
   82                       | type_specifier . declaration_specifiers

    TYPE_NAME   shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    INLINE      shift, and go to state 7
    RESTRICT    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    LONGLONG    shift, and go to state 13
    SIGNED      shift, and go to state 14
    UNSIGNED    shift, and go to state 15
    FLOAT       shift, and go to state 16
    DOUBLE      shift, and go to state 17
    LONGDOUBLE  shift, and go to state 18
    CONST       shift, and go to state 19
    VOLATILE    shift, and go to state 20
    VOID        shift, and go to state 21
    BOOL        shift, and go to state 22
    COMPLEX     shift, and go to state 23
    IMAGINARY   shift, and go to state 24
    STRUCT      shift, and go to state 25
    UNION       shift, and go to state 26
    ENUM        shift, and go to state 27

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35
    function_specifier         go to state 36


State 32

  110 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 110 (type_specifier)


State 33

  113 struct_or_union_specifier: struct_or_union . IDENTIFIER OCURLY_OP struct_declaration_list CCURLY_OP
  114                          | struct_or_union . OCURLY_OP struct_declaration_list CCURLY_OP
  115                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 53
    OCURLY_OP   shift, and go to state 54


State 34

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 35

   83 declaration_specifiers: type_qualifier .
   84                       | type_qualifier . declaration_specifiers

    TYPE_NAME   shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    INLINE      shift, and go to state 7
    RESTRICT    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    LONGLONG    shift, and go to state 13
    SIGNED      shift, and go to state 14
    UNSIGNED    shift, and go to state 15
    FLOAT       shift, and go to state 16
    DOUBLE      shift, and go to state 17
    LONGDOUBLE  shift, and go to state 18
    CONST       shift, and go to state 19
    VOLATILE    shift, and go to state 20
    VOID        shift, and go to state 21
    BOOL        shift, and go to state 22
    COMPLEX     shift, and go to state 23
    IMAGINARY   shift, and go to state 24
    STRUCT      shift, and go to state 25
    UNION       shift, and go to state 26
    ENUM        shift, and go to state 27

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35
    function_specifier         go to state 36


State 36

   85 declaration_specifiers: function_specifier .
   86                       | function_specifier . declaration_specifiers

    TYPE_NAME   shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    INLINE      shift, and go to state 7
    RESTRICT    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    LONGLONG    shift, and go to state 13
    SIGNED      shift, and go to state 14
    UNSIGNED    shift, and go to state 15
    FLOAT       shift, and go to state 16
    DOUBLE      shift, and go to state 17
    LONGDOUBLE  shift, and go to state 18
    CONST       shift, and go to state 19
    VOLATILE    shift, and go to state 20
    VOID        shift, and go to state 21
    BOOL        shift, and go to state 22
    COMPLEX     shift, and go to state 23
    IMAGINARY   shift, and go to state 24
    STRUCT      shift, and go to state 25
    UNION       shift, and go to state 26
    ENUM        shift, and go to state 27

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers     go to state 56
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35
    function_specifier         go to state 36


State 37

    0 $accept: translation_unit . $end
  233 translation_unit: translation_unit . external_declaration
